--- a/portfolio-main/styles/main.css
+++ b/portfolio-main/styles/main.css
@@ -2,16 +2,35 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: roboto;
+    color: #222222;
 }
+
+body {
+    background-color: #f5f5f5;
+}
+
+@font-face {
+    font-family: roboto;
+    src: url(../assets/fonts/RobotoCondensed-Light.ttf);
+    font-weight: normal;
+  }
+
+  @font-face {
+    font-family: roboto;
+    src: url(../assets/fonts/RobotoCondensed-Bold.ttf);
+    font-weight: bold;
+  }
 
 .container {
     width: 100%;
     margin: 0 auto;
+    padding: 20px;
 }
 
 h1 {
     margin: 0;
-    padding: 0;
+    padding: 1rem;
     width: 100%;
     color: rgb(53, 53, 195);
     text-align: center;
@@ -19,24 +38,58 @@ h1 {
     background-color: azure;
 }
 
-.container {
-    padding: 20px;
-    display: flex;
+.box img, .box audio {
+    width: 100%;
+    display: block;
+    margin: auto;
 }
 
-.flexContainer {
-    border: 1px solid black;
+
+.flex-container {
     display: flex;
     flex-wrap: wrap;
     gap: 20px;
     justify-content: space-between;
+    flex-direction: column;
 }
 
-div.flexContainer > * {
-    background-color: rgb(213, 153, 80);
+.video-portfolio {
     width: 100%;
-    border: 1px solid black;
-    height: 80px;
+    background-color: grey;
+}
+
+fieldset {
+    padding: 20px 0;
+    margin-bottom: 10px;
+    border: 0;
+}
+
+input {
+    padding: 5px;
+}
+
+.footer {
+    padding: 20px;
+}
+
+nav ul {
+    display: flex;
+    list-style: none;
+    justify-content: center;
+}
+
+nav ul li {
+    flex: 1;
+    text-align: center;
+}
+
+a {
+    text-decoration: none;
+    font-weight: bold;
+}
+
+a:hover {
+    text-decoration: underline;
 }
 
 /*=======================
@@ -44,38 +97,26 @@ div.flexContainer > * {
 =======================*/
 
 @media screen and (min-width: 768px){
-    .container {
-        width: 80%;
+    .flex-container {
+        flex-direction: row;
+        gap: 20px;
     }
-    div.flexContainer > * {
+
+    .box {
         width: calc(50% - 10px);
     }
 }
 /* 768 */
 
 /*=======================
-        992
-==========================*/
-@media screen and (min-width: 992px){
-    .container {
-        width: 90%;
-    }
-
-    div.flexContainer > * {
-        width: calc(33.33% - 15px);
-    }
-}
-/* 992 */
-
-/*=======================
         1200
 ==========================*/
 @media screen and (min-width: 1200px){
-    .container {
-        width: 95%;
-    }
-    div.flexContainer > * {
-        width: calc(25% - 10px);
+    
+    .box {
+        width: auto;
+        flex: 1;
+        min-width: 30%;
     }
 }
 /* 1200 
