--- a/portfolio-main/styles/main.css
+++ b/portfolio-main/styles/main.css
@@ -54,12 +54,16 @@ h1 {
     margin-bottom: 10px;
 }
 
-.box img, .box audio {
+.box img, .box audio, .box picture {
     width: 100%;
     display: block;
     margin: auto;
 }
 
+.box {
+    width: 100%;
+    height: max-content;
+}
 
 .flex-container {
     display: flex;
@@ -69,9 +73,18 @@ h1 {
     flex-direction: column;
 }
 
+.flex-reverse {
+    flex-direction: row-reverse;
+}
+
 .video-portfolio {
     width: 100%;
+    height: 30%;
     background-color: grey;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
 }
 
 .card {
@@ -105,7 +118,14 @@ h1 {
 textarea, input, select {
     padding: 5px;
     width: 100%;
+    background-color:#f7f7f7 ;
+    border-radius: 5px;
 }
+
+.first-letter {
+    font-size: 35px;
+    line-height: 70px;
+  }
 
 input[type=checkbox] {
     width: auto;
@@ -144,7 +164,7 @@ nav ul li {
     justify-content: space-around;
 }
 
-a {
+nav a {
     text-decoration: none;
     font-weight: bold;
     background-color: #ffffff;
@@ -153,8 +173,24 @@ a {
     border-radius: 5px;
 }
 
-a:hover {
+nav a:hover {
     box-shadow: 0px 10px 14px -8px rgba(0,0,0,0.75);
+}
+
+.text {
+    font-size: 1.5em;
+}
+
+.list {
+    list-style-position: inside;
+}
+
+.list ol {
+    padding-left: 20%;
+}
+
+video {
+    width: 100%;
 }
 
 /*=======================
@@ -167,6 +203,10 @@ a:hover {
         gap: 20px;
     }
 
+    .flex-reverse {
+        flex-direction: row-reverse;
+    }
+
     .box {
         width: calc(50% - 10px);
     }
@@ -175,6 +215,10 @@ a:hover {
         display: grid;
         grid-gap: 10px;
         grid-template-columns: repeat(2, minmax(0, 1fr));
+    }
+
+    .text {
+        font-size: 2em;
     }
 }
 /* 768 */
@@ -194,6 +238,10 @@ a:hover {
         display: grid;
         grid-gap: 10px;
         grid-template-columns: repeat(3, minmax(0, 1fr));
+    }
+
+    .text {
+        font-size: 2.5em;
     }
 }
 /* 1200 
